# cbapitest

./: .env.example  .gitignore  CentralizedBackup_API_TestCases.xlsx  Makefile  conftest.py  gen_excel.py  gen_excel_batch.py  pyproject.toml  rebuild_xlsx.py  requirements.txt
client/: __init__.py  base.py  file_api.py  hyperv_api.py  tos_api.py  vmware_api.py  win_api.py
config/: env.yaml  schema.json
testcases/flows/: test_file_flow.py  test_hyperv_flow.py  test_vmware_flow.py  test_win_flow.py
testcases/integration/: test_cross_module.py
testcases/smoke/: test_file_smoke.py  test_hyperv_smoke.py  test_tos_smoke.py  test_vmware_smoke.py  test_win_smoke.py
utils/: cleaner.py  data_factory.py  logger.py  retry.py
